login update & discuss fix

--- a/app/assets/stylesheets/layout.css
+++ b/app/assets/stylesheets/layout.css
@@ -139,6 +139,9 @@ a:hover{
 .text-color-yellow{
 	color: yellow;
 }
+.text-color-dyellow{
+	color: #FACC2E;
+}
 .text-color-green{
 	color: green;
 }
