--- a/app/views/past_exams/_template_download.html.erb
+++ b/app/views/past_exams/_template_download.html.erb
@@ -50,7 +50,7 @@
 	
 
 		<span class="delete">
-		<button id="delete_{%=file.id%}" class="btn btn-default btn-xs" data-type="{%=file.delete_type%}" data-url="/file_infos/{%=file.id%}" style="display:none;">
+		<button id="delete_{%=file.id%}" class="btn btn-default btn-xs" data-type="DELETE" data-url="/past_exams/{%=file.id%}" style="display:none;">
 
 		 <span class="glyphicon glyphicon-trash"></span>
 
