--- a/app/views/course_maps/public/_xtmpl_qa.html.erb
+++ b/app/views/course_maps/public/_xtmpl_qa.html.erb
@@ -1,77 +1,192 @@
 <script type="text/x-tmpl" id="cm_public_comments">
+
+<input type="hidden" id="cm_id" name="cm_id" value="{%=o.cm_id%}">
+
+<table class="table ">
 	{% for(var i=0,qa ; qa = o.comments[i]; ++i){ %}
-
-		<div class="row">
-			<div class="col-md-3">
-				{%=qa.user.name%}:
-			</div>
-			<div class="col-md-7">
-			{%=qa.comments%}
-			</div>
-<% if current_user %>		
-			<div class="col-md-2">
-			<a href="javascript:void(0);" qa_id="{%=qa.id%}" onclick="qa_reply($(this), {%=o.cm_id%});">reply</a>
-			</div>
-<% end %>		
-		</div>
-
-		{% if(qa.child_comments.length!=0){ %}
-			{% for(var j=0, sub_qa; sub_qa= qa.child_comments[j]; j++){ %}
-			<div class="sub_qa row">
-				<div class="col-md-offset-1 col-md-3">
-				 {%=sub_qa.user.name%}:
-				</div>
-				<div class="col-md-7">
-				 {%=sub_qa.comments%} 
-				</div> 
-			</div>	
-			{% } %}
-		{% } %}
-
-	{% } %} 
-<% if current_user %>		
-	<div>
-		<a href="javascript:void(0);" qa_id="0" onclick="qa_reply($(this), {%=o.cm_id%});">reply</a>
-	</div> 
-<% end %>
-</script>
-<% if current_user %>
-<script type="text/x-tmpl" id="cm_public_comment_form">
-<%= form_tag("/course_maps/cm_public_comment_action", :remote=>true, :class=>"qa_form") do %>	
-	<input id="cm_id" name="cm_id" type="hidden" value="{%=o.cm_id%}">
-		<input id="parent_id" name="parent_id" type="hidden" value="{%=o.parent_id%}">
-
-	<div class="row">
-		<div class="col-md-1" style="margin-top: 6px ;">
-			<%=current_user.name %>
-		</div>
-		<div class="col-md-10">
-			<%=text_field_tag :comment, "", :class=>"form-control", :maxlength=>64 %>
-		</div>
-		<div class="col-md-1">
-			<button class="btn btn-success btn-circle" >
-				<%=fa_icon "check" %>
+		{% include('cm_public_comment_qa_cell', {qa: qa});%}
+	{% } %} 	
+<% if current_user %>	
+	{% include('cm_public_comment_form', {qa: 0});%}
+	<tr class="row" id="qa-new" style="display:none;">
+		<td colspan="5" class="text-center">
+			<button id="reply-new-but" class="btn btn-info btn-circle ing" onclick="return qa_reply($(this), 0);">
+				<%=fa_icon "reply"%>
 			</button>
-		</div>
-	</div>	
-<% end %>
+		</td>
+	</tr>
+<% end %>	
+</table>
+
+</script>
+
+<script type="text/x-tmpl" id="cm_public_comment_qa_cell">
+
+
+	<tr id="qa-{%=o.qa.id%}">
+	<td class="text-center">
+	{% if(o.qa.checked==1){ %}
+	<%=fa_icon "check", :class=>"text-color-green" %>
+	{% }else{ %}
+	<%=fa_icon "exclamation", :class=>"text-color-dyellow " %>
+	{% } %}
+	</td>
+	<td>{%=o.qa.user.name%}:</td>	
+	<td>{%=o.qa.comments%}</td>
+	<td>{%=parseDate(o.qa.time)%}</td>
+	<td>
+<% if current_user %>	
+	<button class="btn btn-info btn-circle" onclick="return qa_reply($(this), {%=o.qa.id%});">
+		<%=fa_icon "reply"%>
+	</button>
+	<% if current_user.role!=1 %>
+		{% if(o.qa.checked==0){ %}
+		<button class="btn btn-success btn-circle" onclick="return qa_check($(this), {%=o.qa.id%});">
+			<%=fa_icon "check"%>
+		</button>
+		{% } %}
+	<% end %>
+<% end %>	
+</td>
+	</tr>
+{% var last = o.qa.child_comments.length-1 ; %}
+{% for(var j=0,sub_qa; sub_qa=o.qa.child_comments[j]; ++j){ %}
+	{% if(last==j){ %}
+		{% include('cm_public_comment_sub_qa_cell', {sub_qa: sub_qa, last:1, qa_id: o.qa.id});%}
+	{% }else{ %}
+		{% include('cm_public_comment_sub_qa_cell', {sub_qa: sub_qa, last:0, qa_id: o.qa.id});%}
+	{% } %}
+{% } %}
+
+</script>
+
+<script type="text/x-tmpl" id="cm_public_comment_sub_qa_cell">
+
+{% if(o.last==1){ %}
+	<tr id="{%=o.qa_id%}-last">
+{% }else{ %}
+	<tr>
+{% } %}
+		<td>Re</td>
+		<td>{%=o.sub_qa.user.name%}:</td>	
+		<td>{%=o.sub_qa.comments%}</td>
+		<td colspan="2">{%=parseDate(o.sub_qa.time)%}</td>
+	</tr>
+
+</script>
+
+<% if current_user %>
+
+<script type="text/x-tmpl" id="cm_public_comment_form">
+
+	<tr class="qa_from">
+		<input type="hidden" id="qa_id" name="qa_id" value="{%=o.qa_id%}">
+		<td></td>
+		<td><%=current_user.name%>:</td>	
+		<td colspan="2"><%=text_field_tag :qa_comment, "", :class=>"form-control", :name=>"qa_comment", :maxlength=>32 %></td>
+		<td><button class="btn btn-success btn-circle" onclick="return qa_submit($(this));"><%=fa_icon "check"%></button></td>
+	</tr>
+	
 </script>
 
 <script>
-	function qa_reply(this_link, cm_id){
+
+	function parseDate(qa_time){
+		var today = new Date() ;
+		var qa_dt = new Date(qa_time);
+		var diff = (today - qa_dt)/1000/60 ; // in minute
+		if(diff < 60)
+			return "about "+parseInt(diff)+" minute(s) ago"; 
+		else{
+			diff = diff/60 ;
+			if(diff < 24)
+				return "about "+parseInt(diff)+" hour(s) ago";
+			else
+				return "about "+parseInt(diff/24)+" day(s) ago";
+		}	
+	}
+
+	function qa_reply(this_but, qa_id){
+		this_but.toggleClass('ing');
+		$('.qa_from').remove();
+		if(!this_but.hasClass('ing'))
+			return false ;
+		if(qa_id!=0)
+			$('#qa-new').show();	
+		else{
+			$('#reply-new-but').removeClass('ing');
+			$('#qa-new').hide();
+		}	
+		var thir_tr = this_but.parent().parent() ;
+		thir_tr.after(tmpl('cm_public_comment_form',{qa_id: qa_id}));
 		
-		var parent_id = this_link.attr('qa_id') ;
-		var this_div = this_link.parent() ;
-		$('.qa_form').remove();
-		this_div.after(tmpl("cm_public_comment_form", {"cm_id": cm_id,"parent_id": parent_id}));
-		
-		if(this_div==0)
-			this_div.remove();
-		else
-			this_link.remove();
-			
 		return false ;
+	}
+
+	function qa_submit(this_but){
+		
+		var cm_id = $('#cm_id').val();
+		var qa_id = $('#qa_id').val();
+		var comment = $('#qa_comment').val();
+		this_but.toggleClass('ing');
+		$('.qa_from').remove();
+	//	return false ;
+		$.ajax({
+			type: "POST",
+  			url: "/course_maps/cm_public_comment_action",
+  			dataType: "json",
+  			data: {
+  				type : "reply",
+  				cm_id : cm_id,
+  				parent_id : qa_id,
+  				comment : comment
+  			},
+  			success: function(data){
+  				//console.log(data);
+  				if(qa_id==0){// new qa
+  					$('#qa-new').before(tmpl('cm_public_comment_qa_cell', {qa: data}));
+  				}else{				
+  					var tmp = $('#'+qa_id+'-last') ;			
+  					if(tmp.length){
+  						$('#'+qa_id+'-last').attr('id', '');// reset last id
+  						tmp.after(tmpl('cm_public_comment_sub_qa_cell', {sub_qa: data, last: 1, qa_id: qa_id}));
+  					}else{//the first reply
+  						$('#qa-'+qa_id).after(tmpl('cm_public_comment_sub_qa_cell', {sub_qa: data, last: 1, qa_id: qa_id}));
+  					}	
+  				}	
+  			},
+  			error: function(){
+  				alert("internal server error x(");
+  			}
+		});
+		
+		return false ; 
+	}
+	
+	function qa_check(this_but, qa_id){
+		console.log(qa_id);
+		//return false ;
+		$.ajax({
+			type: "POST",
+  			url: "/course_maps/cm_public_comment_action",
+  			dataType: "json",
+  			data: {
+  				type : "check",
+  				qa_id : qa_id
+  			},
+  			success: function(data){
+  				var first_td = this_but.parent().parent().children().first();
+  				first_td.html('<%=fa_icon "check", :class=>"text-color-green"%>');
+  				this_but.remove();
+  			},
+  			error: function(){
+  				alert("internal server error x(");
+  			}
+		});
+		
+		return false ; 
 	}
 	
 </script>
+
 <% end %>
