--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -15,11 +15,11 @@
     <!-- Collect the nav links, forms, and other content for toggling -->
     <div class="navbar-collapse collapse" >
       <ul class="nav navbar-nav">
-				<% if current_user && current_user.role!=1 %>
+				<% if current_user and not current_user.isNormal? %>
 					<li class="dropdown">
 						<a href="#" class="dropdown-toggle" data-toggle="dropdown">管理<b class="caret"></b></a>
 						<ul class="dropdown-menu">
-						<% if current_user.role==0 %>
+						<% if current_user.isAdmin? %>
 							<li><a href="/admin/users" rel="nofollow">使用者<span class="badge pull-right"><%=User.all.count%></span></a></li>
 						<% end %>
 							<li><a href="/departments" rel="nofollow">系<span class="badge pull-right"><%=Department.all.count%></span></a></li>
@@ -34,7 +34,7 @@
 				<li><a href="/courses/simulation" rel="nofollow">模擬排課</a></li>
 				<li><a href="/course_maps" rel="nofollow">課程地圖</a></li>
 				<!--<li><a href="/events/" rel="nofollow">talk</a></li>-->
-			<% if current_user and current_user.student_id %>	
+			<% if current_user.try(:student_id) %>	
 				<li class="dropdown">
 					<a href="#" class="dropdown-toggle" data-toggle="dropdown">歷年課表<b class="caret"></b></a>
 					<ul class="dropdown-menu">
@@ -73,23 +73,14 @@
 						<%=current_user.name%>
 					<% end %>
 					<ul class="dropdown-menu">
-					<% if current_user.uid and not current_user.student_id%>
 						<li>
-							<%= link_to  "綁定e3帳號", 'javascript:void(0);', :class=>'fb-bind-e3'%>
-						</li>
-					<% elsif not current_user.uid and current_user.student_id %>
-						<li>
-							<%= link_to  "綁定FaceBook帳號", '/auth/facebook', :confirm=>'注意! 綁定後無法反悔', :onclick=>"disale_submit()"%>
-						</li>
-					<% end %>	
-						<li>
-							<%= link_to  "登出", signout_path, id: "sign_out" %>
+							<%= link_to  "登出", "/signout" %>
 						</li>					
 					</ul>
 				</li>
 		<% else %>
 				<li>
-					<%=link_to "登入","javascript:void(0);",:class=>"sign_in" %>
+					<%=link_to "登入","/signin" %>
 				</li>	
 		<% end %>  			
 			</ul>
@@ -100,23 +91,6 @@
 
 <script>
 	$(document).ready(function(){	
-	
-	  // login modal 
-		<% if not current_user %>
-			$("#global_modal .modal-content").html(tmpl("login", {ltype:"login"})) ;
-		<% elsif not current_user.student_id%>
-			$("#global_modal .modal-content").html(tmpl("login", {ltype:"bind"})) ;
-		<% end %>
-		bind_func();
-		
-		<% if current_user and current_user.uid and not current_user.student_id%>	
-			$('.fb-bind-e3').click(function(){
-				$("#global_modal .modal-content").html(tmpl("login", {ltype:"bind"})) ;
-				bind_func();
-				$("#global_modal").modal('show');			
-				return false;
-			});
-		<% end %>
 		// small timetable
 		$("#sm_schd_button").click(
 			function(){	
@@ -130,7 +104,7 @@
 		// shopping cart
 		$("#cart_but").click(
 			function(){		
-		  	$("#global_modal .modal-content").html('').append('<div class="modal-body"></div>') ;
+			  	$("#global_modal .modal-content").html('').append('<div class="modal-body"></div>') ;
 				$("#global_modal .modal-body").load("/courses/show_cart");
 				$("#global_modal").modal('show');
 			}
@@ -189,4 +163,3 @@
 
 <%=render "/courses/course_table/xtmpl_course_table" if current_user%>
 <%=render "/courses/course_table/xtmpl_small_course_table" if current_user%>
-<%=render "/layouts/modal_content/xtmpl_header_login"%>
