--- a/app/views/past_exams/list_by_ct.html.erb
+++ b/app/views/past_exams/list_by_ct.html.erb
@@ -2,7 +2,7 @@
 
 <!--<div class="container">-->
   
-  <%= form_for FileInfo.new, :html => { :multipart => true, :id => "fileupload"  } do |f| %>
+  <%= form_for PastExam.new, :html => { :multipart => true, :id => "fileupload"  } do |f| %>
     <!-- The table listing the files available for upload/download -->
     <table class="table well" >
 			<tbody class="files" data-toggle="modal-gallery" data-target="#modal-gallery">
@@ -93,11 +93,11 @@
   function change_to_edit(file){
     //alert();
 
-	var semester_select="<%=j select_tag("file_info[semester_id]", options_from_collection_for_select(@sems, "id", "name"))%>";
+	var semester_select="<%=j select_tag("past_exam[semester_id]", options_from_collection_for_select(@sems, "id", "name"))%>";
 	$("#download_"+file.id+" td[class=semester_"+file.id+"]").html(semester_select);
 	$("td.semester_"+file.id+" select").val(file.semester_id);
 	
-	var description_input='<input rows="1" name="file_info[description]" value="'+file.description+'">';
+	var description_input='<input rows="1" name="past_exam[description]" value="'+file.description+'">';
 	$("#download_"+file.id+" td[class=description_"+file.id+"]").html(description_input);
 	
 	$("#edit_but_"+file.id).hide();
@@ -108,53 +108,38 @@
   }
   
   function save_update(id){
-	var description=$("td.description_"+id+" input").val();
-	//alert(description);
-	//return;
-
-	var semester_id=$("td.semester_"+id+" select").val();
-	//alert(text);
-	$.ajax({
-		type: "GET",
-		url: "/file_infos/edit",
-		data: {
-			description: description,//main or sub
-			semester_id: semester_id,
-			id: id, //comment id
-		},
-		success: function(data) {
-			var file=JSON.parse(data)[0];
-			//file=
-			//alert(zz[0].id);
-			//alert(JSON.stringify(file, null, 4));
-			$("#edit_but_"+file.id).attr("onclick","change_to_edit("+JSON.stringify(file, null, 4)+")");
-			//$("#download_"+file.id+" td[class=teacher_"+file.id+"]").html(file.teacher_name);
-	
-	
-			$("#download_"+file.id+" td[class=semester_"+file.id+"]").html(file.semester_name);
-	
-	
-			$("#download_"+file.id+" td[class=description_"+file.id+"]").html(file.description);
-			$("#edit_but_"+file.id).show();
-			$("#save_but_"+file.id).hide();
-			$("#delete_"+file.id).hide();
-			
-			
-			
-		},
-		error :function(){
-			alert("ERROR");
-		}
-	});
+		var description=$("td.description_"+id+" input").val();
+		var semester_id=$("td.semester_"+id+" select").val();
+		$.ajax({
+			type: "GET",
+			url: "/past_exams/edit",
+			data: {
+				description: description,//main or sub
+				semester_id: semester_id,
+				id: id, //comment id
+			},
+			success: function(data) {
+				var file=JSON.parse(data)[0];
+				$("#edit_but_"+file.id).attr("onclick","change_to_edit("+JSON.stringify(file, null, 4)+")");
+				$("#download_"+file.id+" td[class=semester_"+file.id+"]").html(file.semester_name);
+				$("#download_"+file.id+" td[class=description_"+file.id+"]").html(file.description);
+				$("#edit_but_"+file.id).show();
+				$("#save_but_"+file.id).hide();
+				$("#delete_"+file.id).hide();
+			},
+			error :function(){
+				alert("ERROR");
+			}
+		});
   }
   
 
   $(document).ready(function () {
-    $('#file_info_upload').attr('name','file_info[upload]');
+    $('#past_exam_upload').attr('name','past_exam[upload]');
 	  $('#fileupload').fileupload();
     $('#fileupload').fileupload('option',{
-		  acceptFileTypes : /(\.|\/)<%=FileInfo.support_types%>$/i,
-		  maxFileSize: <%=FileInfo.max_upload_size%>
+		  acceptFileTypes : /(\.|\/)<%=PastExam.support_types%>$/i,
+		  maxFileSize: <%=PastExam.max_upload_size%>
 	  });
 	  $('#fileupload').bind('fileuploadsubmit', function (e, data) {
 			var inputs = data.context.find(':input');
@@ -177,27 +162,18 @@
     });
 		
     // Load existing files:
-		$.getJSON("/file_infos/?ct_id=<%=params[:ct_id] %>", function (files) {
+		$.getJSON("/past_exams/?ct_id=<%=params[:ct_id] %>", function (files) {
 			var fu = $('#fileupload').data('blueimpFileupload'), 
 				template;
 			fu._adjustMaxNumberOfFiles(-files.length);
-
 			template = fu._renderDownload(files)
 				.appendTo($('#fileupload .files'));
-			// Force reflow:
-			fu._reflow = fu._transition && template.length &&
-				template[0].offsetWidth;
+			fu._reflow = fu._transition && template.length && template[0].offsetWidth;
 			template.addClass('in');
 			$('#loading').remove();
-			
-			
-			
 			for (var i=0, file; file=files[i]; i++) {
-				//$("td.teacher_"+file.id+" select").val(file.teacher_id);
 				$("td.semester_"+file.id+" select").val(file.semester_id);
 			}
-			
-			
 		});
   });
 	
