--- a/app/views/main/index.html.erb
+++ b/app/views/main/index.html.erb
@@ -43,7 +43,7 @@
 
 
 
-	<div class="col-md-12 hidden-sm hidden-md hidden-lg">
+	<div class="col-md-12 hidden-sm hidden-md hidden-lg vertical-center">
 		<div href="/courses/" class="sm-func-container clickable-hover" >
 			<p class="text-center index-func-desc" style=""><%=fa_icon "search" %>找課程</p>
 		</div>
@@ -55,9 +55,9 @@
 		</div>
 	</div>
 	
-	<div class="col-md-12 hidden-xs " style="/*position:absolute;margin-top:30%;margin-bottom:3%;height:200px; background-color: rgba(255,255,255, 0); z-index:1000;*/ ">
+	<div class="col-md-12 hidden-xs" style="/*position:absolute;margin-top:30%;margin-bottom:3%;height:200px; background-color: rgba(255,255,255, 0); z-index:1000;*/ ">
 		
-		<div class="row" style="margin-top:35%;">
+		<div class="row " style="margin-top:15%;">
 		
 			<div class="container icon-container col-md-offset-3 col-sm-offset-2" >
 				<div class="row row-margin" >
