--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -32,7 +32,7 @@
 
 				<li><a href="/courses/" rel="nofollow">全校課程</a></li>
 				<li><a href="/courses/simulation" rel="nofollow">模擬排課</a></li>
-				<li><a href="/course_maps" rel="nofollow">課程地圖</a></li>
+				<!--<li><a href="/course_maps" rel="nofollow">課程地圖</a></li>-->
 				<!--<li><a href="/events/" rel="nofollow">talk</a></li>-->
 			<% if current_user.try(:student_id) %>	
 				<li class="dropdown">
@@ -51,11 +51,12 @@
 		
       </ul>
 			
-			<ul class="nav navbar-nav navbar-right">	
+			<ul class="nav navbar-nav navbar-right">
+			<% if current_user %>	
 				<li>
 					<a class="no-padding-bottom"><%= fa_icon("shopping-cart 2x", :class=>"toolTip clickable-hover", :id=>"cart_but", :title=>"觀察名單") %></a>
 				</li>		
-		<% if current_user %>	
+		
 				<li>
 					<a href="#" class="toolTip dropdown-toggle toolTip" data-toggle="dropdown" title="課表"><%= fa_icon("calendar 2x", :id=>"sm_schd_button")%></a>
 						<ul class="dropdown-menu">
