fix asset_path include

--- a/app/views/courses/show.html.erb
+++ b/app/views/courses/show.html.erb
@@ -1,6 +1,6 @@
-<%= javascript_include_tag asset_path("course_content"), "data-turbolinks-track" => true %>
-<%= javascript_include_tag asset_path("courses/chart"), "data-turbolinks-track" => true %>
-<%= javascript_include_tag asset_path("courses/main"), "data-turbolinks-track" => true %>
+<%= javascript_include_tag "course_content", "data-turbolinks-track" => true %>
+<%= javascript_include_tag "courses/chart", "data-turbolinks-track" => true %>
+<%= javascript_include_tag "courses/main", "data-turbolinks-track" => true %>
 
 <div class="row">
 	<div class="col-md-9 scroll-content col-md-offset-1">
