--- a/app/views/course_maps/index.html.erb
+++ b/app/views/course_maps/index.html.erb
@@ -1,4 +1,4 @@
-<%= javascript_include_tag asset_path("course_maps/public"), "data-turbolinks-track" => true %>
+<%= javascript_include_tag "course_maps/public", "data-turbolinks-track" => true %>
 
 <div class="row" style="min-height:1000px;height:100%;">
 	<div class="col-sm-3 col-md-2 affix-sidebar sidebar-nav" style="margin-top:-30px;margin-left:-5px;width:250px;height:100%;/*min-height:100%;*/">
